[package]
name = "xayn-discovery-engine-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "AGPL-3.0-only"

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
derivative = { workspace = true }
derive_more = { workspace = true }
displaydoc = { workspace = true }
figment = { workspace = true, features = ["json"] }
futures = { workspace = true }
itertools = { workspace = true }
kodama = "0.2.3"
ndarray = { workspace = true }
num-derive = "0.3.3"
num-traits = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_repr = "0.1.9"
sqlx = { workspace = true, features = ["sqlite"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "sync"] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
xayn-discovery-engine-ai = { path = "../ai/ai" }
xayn-discovery-engine-bert = { path = "../ai/bert" }
xayn-discovery-engine-providers = { path = "../providers" }

[dev-dependencies]
async-once-cell = "0.4.2"
criterion = { workspace = true }
maplit = { workspace = true }
mockall = "0.11.2"
rand_chacha = "0.3.1"
serde_json = { workspace = true }
tempfile = "3.3.0"
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
wiremock = { workspace = true }
xayn-discovery-engine-test-utils = { path = "../ai/test-utils" }

[[bench]]
name = "benches"
harness = false
