[package]
name = "xayn-discovery-engine-providers"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde"] }
derive_more = { version = "0.99.17", default-features = false, features = ["display", "deref"] }
displaydoc = "0.2.3"
itertools = "0.10.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
regex = { version = "1.5.6", features = ["unicode-gencat"] }
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_path_to_error = "0.1.7"
thiserror = "1.0.31"
url = "2.2.2"

[dev-dependencies]
claim = "0.5.0"
tokio = { version = "1.19.2", features = ["macros", "rt"] }
wiremock = "0.5.13"
