[package]
name = "xayn-discovery-engine-providers"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "serde"] }
derive_more = { version = "0.99.17", default-features = false, features = ["display", "deref"] }
displaydoc = "0.2.3"
itertools = "0.10.5"
maplit = "1.0.2"
once_cell = "1.15.0"
regex = { version = "1.6.0", features = ["unicode-gencat"] }
reqwest = { version = "0.11.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_path_to_error = "0.1.8"
thiserror = "1.0.37"
tracing = "0.1.36"
url = "2.3.1"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt"] }
wiremock = "0.5.14"
