[package]
name = "xayn-discovery-engine-tooling"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[[bin]]
name = "clean_sources"

[[bin]]
name = "discovery_engine"

[[bin]]
name = "newscatcher"

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.12", features = ["derive"] }
csv = "1.1.6"
indicatif = "0.17.1"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["fs"] }
url = "2.3.1"
xayn-discovery-engine-ai = { path = "../ai/ai" }
xayn-discovery-engine-core = { path = "../core" }
xayn-discovery-engine-providers = { path = "../providers" }
