[package]
name = "xayn-discovery-engine-tooling"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "AGPL-3.0-only"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
url = { workspace = true }
xayn-discovery-engine-ai = { path = "../ai/ai" }
xayn-discovery-engine-core = { path = "../core" }
xayn-discovery-engine-providers = { path = "../providers" }

[[bin]]
name = "clean_sources"

[[bin]]
name = "discovery_engine"

[[bin]]
name = "newscatcher"
