[package]
name = "web-api"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[[bin]]
name = "ingestion"

[dependencies]
bincode = "1.3.3"
bytes = { version = "1.2.1", features = ["serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["serde"] }
derive_more = { version = "0.99.17", default-features = false, features = ["display", "from", "as_ref"] }
displaydoc = "0.2.3"
dotenvy = "0.15.1"
envconfig = "0.10.0"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.36"
tracing-subscriber = "0.2.7"
urlencoding = "2.1.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
warp = "0.3.2"
xayn-discovery-engine-ai = { path = "../ai/ai" }
xayn-discovery-engine-bert = { path = "../ai/bert" }
xayn-discovery-engine-core = { path = "../core" }
xayn-discovery-engine-providers = { path = "../providers" }
xayn-discovery-engine-tokenizer = { path = "../ai/tokenizer" }
