[package]
name = "web-api"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "AGPL-3.0-only"

[dependencies]
bincode = { workspace = true }
bytes = { version = "1.2.1", features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true }
displaydoc = { workspace = true }
dotenvy = "0.15.5"
envconfig = "0.10.0"
futures = { workspace = true }
itertools = { workspace = true }
lazy_static = "1.4.0"
ndarray = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
urlencoding = "2.1.2"
uuid = { workspace = true }
warp = "0.3.3"
xayn-discovery-engine-ai = { path = "../ai/ai" }
xayn-discovery-engine-bert = { path = "../ai/bert" }
xayn-discovery-engine-core = { path = "../core" }
xayn-discovery-engine-providers = { path = "../providers" }

[[bin]]
name = "ingestion"
