[package]
name = "web-api2"
version = "0.1.0"
authors = ["Xayn AG"]
description = "Wep Api server for the document personalization service."
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
clap = { version = "4.0.9", features = ["derive"] }
derive_more = { version = "0.99.17", features = ["display", "deref"] }
figment = { version = "0.10.7", features = ["toml"] }
mime = "0.3.16"
once_cell = "1.15.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt"] }
tracing = "0.1.36"
tracing-actix-web = "0.6.1"
tracing-subscriber = { version = "0.3.15", features = ["json"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
