[package]
name = "web-api2"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Wep Api server for the document personalization service."
license = "AGPL-3.0-only"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1", default-features = false }
anyhow = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true, features = ["display", "deref", "as_ref", "into"] }
displaydoc = { workspace = true }
dotenvy = "0.15.5"
figment = { workspace = true, features = ["env", "toml"] }
futures-util = { workspace = true }
mime = "0.3.16"
once_cell = { workspace = true }
pin-project = { workspace = true }
regex = { workspace = true }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true }
urlencoding = "2.1.2"
uuid = { workspace = true }
xayn-discovery-engine-ai = { path = "../ai/ai" }
xayn-discovery-engine-bert = { path = "../ai/bert" }

[dev-dependencies]
trycmd = "0.14.1"
