[package]
name = "xayn-discovery-engine-ai"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.19", default-features = false }
derivative = "2.2.0"
derive_more = { version = "0.99.17", default-features = false, features = ["deref", "display", "from", "into"] }
displaydoc = "0.2.3"
itertools = "0.10.3"
lazy_static = "1.4.0"
# to be kept in sync with xayn-discovery-engine-bert
ndarray = "=0.15.3"
rand = "0.8.5"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive", "rc"] }
smallvec = "1.8.0"
thiserror = "1.0.30"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
xayn-discovery-engine-bert = { path = "../bert" }
xayn-discovery-engine-kpe = { path = "../kpe" }
xayn-discovery-engine-layer = { path = "../layer" }
xayn-discovery-engine-providers = { path = "../../providers" }

[dev-dependencies]
csv = "1.1.6"
mockall = "0.11.0"
once_cell = "1.10.0"
paste = "1.0.7"
rstest = "0.12.0"
rstest_reuse = "0.3.0"
serde_json = "1.0.79"
xayn-discovery-engine-test-utils = { path = "../test-utils" }
