[package]
name = "xayn-discovery-engine-ai"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "AGPL-3.0-only"

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
displaydoc = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["rc"] }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
xayn-discovery-engine-bert = { path = "../bert" }
xayn-discovery-engine-providers = { path = "../../providers" }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde_json = { workspace = true }
xayn-discovery-engine-test-utils = { path = "../test-utils" }

[[bench]]
name = "benches"
harness = false
