[package]
name = "xayn-discovery-engine-ai"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.21", default-features = false }
derivative = "2.2.0"
derive_more = { version = "0.99.17", default-features = false, features = ["as_ref", "display", "from"] }
displaydoc = "0.2.3"
itertools = "0.10"
ndarray = "0.15.6"
rayon = "1.5.3"
serde = { version = "1.0.144", features = ["derive", "rc"] }
thiserror = "1.0.32"
tracing = "0.1.36"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
xayn-discovery-engine-bert = { path = "../bert" }
xayn-discovery-engine-providers = { path = "../../providers" }

[dev-dependencies]
serde_json = "1.0.85"
xayn-discovery-engine-test-utils = { path = "../test-utils" }

[features]
default = ["japanese"]
japanese = ["xayn-discovery-engine-bert/japanese"]
