[package]
name = "xayn-discovery-engine-bert"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
displaydoc = "0.2.3"
float-cmp = "0.9.0"
ndarray = { version = "0.15.6", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.32"
tract-onnx = "0.17.3"
xayn-discovery-engine-tokenizer = { path = "../tokenizer" }
lindera = { version = "0.17.0", features = ["ipadic"], optional = true }

# dev-dependencies which don't work for aarch targets
onnxruntime = { version = "0.0.13", optional = true }

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }
csv = "1.1.6"
indicatif = "0.17.0"
xayn-discovery-engine-test-utils = { path = "../test-utils" }

[features]
japanese = ["dep:itertools", "dep:lindera"]

[[example]]
name = "mbert"
test = false

[[example]]
name = "validate"
test = false
required-features = ["onnxruntime"]

[[bench]]
name = "mbert"
harness = false
test = false
required-features = ["onnxruntime"]
