[package]
name = "xayn-discovery-engine-bert"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
derive_more = "*"
displaydoc = "0.2.3"
float-cmp = "0.9.0"
itertools = { version = "0.10", optional = true }
lindera = { version = "0.17.0", features = ["ipadic"], optional = true }
ndarray = { version = "0.15.6", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.32"
tokenizers = { version = "0.13.0", default-features = false, features = ["onig"] }
tract-onnx = "0.17.3"

# dev-dependencies which don't work for aarch targets
onnxruntime = { version = "0.0.13", optional = true }

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }
csv = "1.1.6"
indicatif = "0.17.0"
xayn-discovery-engine-test-utils = { path = "../test-utils" }

[features]
default = ["japanese"]
japanese = ["dep:itertools", "dep:lindera"]

