[package]
name = "xayn-discovery-engine-bert"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "AGPL-3.0-only"

[dependencies]
derive_more = { workspace = true }
displaydoc = { workspace = true }
float-cmp = { workspace = true }
itertools = { workspace = true }
lindera = { git = "https://github.com/lindera-morphology/lindera", rev = "316fcdeafa3f1f0253f29d6a9bf17c702668ec6d" }
ndarray = { workspace = true, features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tract-onnx = { workspace = true }

# dev-dependencies which don't work for aarch targets
onnxruntime = { version = "0.0.13", optional = true }

[dev-dependencies]
criterion = { workspace = true }
csv = { workspace = true }
indicatif = { workspace = true }
xayn-discovery-engine-test-utils = { path = "../test-utils" }

[[example]]
name = "mbert"
test = false

[[example]]
name = "validate"
test = false
required-features = ["onnxruntime"]

[[bench]]
name = "mbert"
harness = false
test = false
required-features = ["onnxruntime"]
