[package]
name = "xayn-discovery-engine-kpe"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["deref", "from"] }
displaydoc = "0.2.3"
ndarray = "0.15.6"
thiserror = "1.0.32"
tokenizers = { version = "0.13.0", default-features = false, features = ["onig"] }
tract-onnx = "0.17.3"
xayn-discovery-engine-layer = { path = "../layer" }

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }
xayn-discovery-engine-test-utils = { path = "../test-utils" }

[[example]]
name = "kpe"
test = false

[[bench]]
name = "kpe"
harness = false
test = false
