[package]
name = "xayn-discovery-engine-kpe"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "AGPL-3.0-only"

[dependencies]
derive_more = { workspace = true }
displaydoc = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tract-onnx = { workspace = true }
xayn-discovery-engine-layer = { path = "../layer" }

[dev-dependencies]
criterion = { workspace = true }
xayn-discovery-engine-test-utils = { path = "../test-utils" }

[[example]]
name = "kpe"
test = false

[[bench]]
name = "kpe"
harness = false
test = false
