[package]
name = "xayn-discovery-engine-layer"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
bincode = "1.3.3"
displaydoc = "0.2.3"
# to be kept in sync with tract-core
ndarray = "=0.15.3"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
xayn-discovery-engine-test-utils = { path = "../test-utils" }
