[package]
name = "xayn-discovery-engine-layer"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
bincode = "1.3.3"
displaydoc = "0.2.3"
ndarray = "0.15.6"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.141", features = ["derive"] }
thiserror = "1.0.32"

[dev-dependencies]
xayn-discovery-engine-test-utils = { path = "../test-utils" }
