[package]
name = "xayn-discovery-engine-layer"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "AGPL-3.0-only"

[dependencies]
bincode = { workspace = true }
displaydoc = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
xayn-discovery-engine-test-utils = { path = "../test-utils" }
