[package]
name = "xayn-discovery-engine-test-utils"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"
publish = false

[dependencies]
float-cmp = "0.9.0"
# to be kept in sync with rubert
ndarray = "=0.15.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
uuid = "0.8.2"
