[package]
name = "xayn-discovery-engine-tokenizer"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
displaydoc = "0.2.3"
num-traits = "0.2.14"
regex = "1.5.4"
regex-syntax = "0.6.25"
smallstr = "0.3.0"
thiserror = "1.0.30"
unicode-normalization-alignments = "0.1.12"
unicode_categories = "0.1.1"
