[package]
name = "xayn-discovery-engine-tokenizer"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
displaydoc = "0.2.3"
num-traits = "0.2.15"
regex = "1.5.6"
regex-syntax = "0.6.26"
smallstr = "0.3.0"
thiserror = "1.0.31"
unicode-normalization-alignments = "0.1.12"
unicode_categories = "0.1.1"
