[package]
name = "async-bindgen-derive"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
once_cell = { workspace = true }
proc-macro2 = "1.0.46"
quote = "1.0.21"
syn = { version = "1.0.101", features = ["extra-traits", "full"] }
